[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/MochiyPopPOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 200
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0.466667, 0.529412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 2160.0
margin_bottom = 636.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "A game that is 
indeed concluded!"
align = 1
valign = 1

[node name="PLAY" type="Button" parent="VBoxContainer"]
margin_top = 640.0
margin_right = 2160.0
margin_bottom = 1277.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[node name="HOWTO" type="Button" parent="VBoxContainer"]
margin_top = 1281.0
margin_right = 2160.0
margin_bottom = 1918.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "HOW TO PLAY"

[node name="QUIT" type="Button" parent="VBoxContainer"]
margin_top = 1922.0
margin_right = 2160.0
margin_bottom = 2558.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "QUIT"

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 2562.0
margin_right = 2160.0
margin_bottom = 3199.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "HIGHSCORE:"
align = 1
valign = 1

[node name="HighScore" type="Label" parent="VBoxContainer"]
margin_top = 3203.0
margin_right = 2160.0
margin_bottom = 3840.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[connection signal="pressed" from="VBoxContainer/PLAY" to="." method="_on_PLAY_pressed"]
[connection signal="pressed" from="VBoxContainer/HOWTO" to="." method="_on_HOWTO_pressed"]
[connection signal="pressed" from="VBoxContainer/QUIT" to="." method="_on_QUIT_pressed"]
